--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <p>для Mac: <span>Cmd + Opt + J</span></p>
       <br />
       <p>Если DevTools уже открыт, выберите вкладку <span>Консоль</span>.</p>
+      <a href="test.html">Test</a>
     </div>
+
     <script src="js/script.js" type="module"></script>
   </body>
 </html>
