--- a/test.html
+++ b/test.html
@@ -12,21 +12,21 @@
 
     <ul class="tags js-tags">
       <li>
-        <button class="list__btn tags__btn" data-value="#тигр">тигр</button>
+        <button class="list__btn tags__btn" data-value="тигр">тигр</button>
       </li>
       <li>
-        <button class="list__btn tags__btn" data-value="#слон">слон</button>
+        <button class="list__btn tags__btn" data-value="слон">слон</button>
       </li>
       <li>
-        <button class="list__btn tags__btn" data-value="#лисичка">
+        <button class="list__btn tags__btn" data-value="лисичка">
           лисичка
         </button>
       </li>
       <li>
-        <button class="list__btn tags__btn" data-value="#собака">собака</button>
+        <button class="list__btn tags__btn" data-value="собака">собака</button>
       </li>
       <li>
-        <button class="list__btn tags__btn" data-value="#орел">орел</button>
+        <button class="list__btn tags__btn" data-value="орел">орел</button>
       </li>
     </ul>
 
