--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <br />
       <p>Если DevTools уже открыт, выберите вкладку <span>Консоль</span>.</p>
       <a href="test.html">Test</a>
+      <a href="test-2.html"><span>Color palette</span></a>
     </div>
 
     <script src="js/script.js" type="module"></script>
