--- a/test.html
+++ b/test.html
@@ -31,5 +31,6 @@
     </ul>
 
     <script src="js/test.js" type="module"></script>
+    <script src="js/test-2.js" type="module"></script>
   </body>
 </html>
